# soga-program-library

./: Anchor.toml  Cargo.toml  ReadMe.md  package.json
programs/soga-node-sale/: Cargo.toml
programs/soga-node-sale/src/: error.rs  lib.rs  meta.rs  utils.rs
programs/soga-node-sale/src/events/: airdrop_event.rs  buy_event.rs  buy_with_token_event.rs  create_order_receipt_event.rs  fill_order_event.rs  initialize_sale_phase_event.rs  initialize_sale_phase_payment_token_event.rs  initialize_sale_phase_tier_event.rs  mod.rs  update_sale_phase_event.rs  update_sale_phase_payment_token_event.rs  update_sale_phase_tier_event.rs
programs/soga-node-sale/src/instructions/: Initialize_sale_phase_tier.rs  airdrop.rs  buy.rs  buy_with_token.rs  create_order_receipt.rs  fill_order.rs  initialize.rs  initialize_sale_phase.rs  initialize_sale_phase_payment_token.rs  initialize_sale_phase_tier.rs  mod.rs  update_key.rs  update_sale_phase.rs  update_sale_phase_payment_token.rs  update_sale_phase_tier.rs
programs/soga-node-sale/src/states/: collection_account.rs  mod.rs  node_account.rs  order_detail_account.rs  soga_node_sale_config_account.rs  soga_node_sale_phase_detail_account.rs  soga_node_sale_phase_payment_token_detail_account.rs  soga_node_sale_phase_tier_detail_account.rs  user_detail_account.rs  user_tier_detail_account.rs
programs/soga-raffle-ticket/: Cargo.toml
programs/soga-raffle-ticket/src/: error.rs  lib.rs  meta.rs  utils.rs
programs/soga-raffle-ticket/src/events/: add_claimed_ticket_event.rs  add_ticket_winner_event.rs  buy_ticket_event.rs  create_payment_config_event.rs  create_ticket_config_event.rs  mod.rs  refund_ticket_event.rs  update_payment_config_event.rs  withdraw_payment_supply_event.rs
programs/soga-raffle-ticket/src/instructions/: mod.rs  (+12 more)
(+8 files in other folders)
