[package]
name = "soga-node-sale"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "soga_node_sale"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = {version = "0.29.0", features = ["metadata"]}
mpl-token-metadata = { version = "4.1.0", features = [] }
pyth-solana-receiver-sdk = { version = "0.1.0", features = [] }
solana-security-txt = { version = "1.0.2", features = [] }
