[package]
name = "soga-raffle-ticket"
version = "0.1.0"
description = "HyperFuse Raffle Ticket Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "soga_raffle_ticket"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["metadata"] }
solana-security-txt = { version = "1.0.2", features = [] }
